(lang dune 3.11)

(name parser_combinators)

(generate_opam_files true)

(source
 (github kristopher38/parser-combinators))

(authors "Kristopher38")

(maintainers "Kristopher38")

(license MIT)

(documentation https://github.com/Kristopher38/parser-combinators)

(package
 (name parser_combinators)
 (synopsis "A library of parser combinators")
 (description "A library of parser combinators")
 (depends ocaml dune)
 (tags ("parser" "combinators")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
